<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textViewCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/mainTextCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCountry">

        <RadioButton
            android:id="@+id/radioButtonRus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRus" />

        <RadioButton
            android:id="@+id/radioButtonUkr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnUkr" />

        <RadioButton
            android:id="@+id/radioButtonBel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnBel" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnSetMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupMargin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/textview"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMargin" />

    <RadioGroup
        android:id="@+id/radioGroupMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMargin">

        <RadioButton
            android:id="@+id/radioButtonBig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnBig" />

        <RadioButton
            android:id="@+id/radioButtonMiddle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMiddle" />

        <RadioButton
            android:id="@+id/radioButtonSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSmall" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/mainTextMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupCountry" />
</androidx.constraintlayout.widget.ConstraintLayout>